# omnix

./: .envrc  .gitattributes  .gitignore  Cargo.toml  Dioxus.toml  README.md  bacon.toml  build.rs  flake.nix  justfile  om.yaml  omnixrc  rust-toolchain.toml  rust.nix  tailwind.config.js
.github/: copilot-instructions.md
.github/workflows/: ci-nix.yml  ci.yaml  main.yaml  static-binary-check.yaml  website.yaml
.github/workflows/static-binary-check/: action.yaml
assets/: tailwind.css
backend/: .gitignore  Cargo.toml  default.nix
crates/direnv/: Cargo.toml
crates/direnv/src/: lib.rs
crates/flakreate/: Cargo.toml  LICENSE  README.md  crate.nix
crates/flakreate/registry/: README.md  flake.nix  flake.nix.json
crates/flakreate/registry/nix/: flake-output-cache.nix
crates/flakreate/src/: lib.rs  main.rs  registry.rs
crates/flakreate/src/flake_template/: config.rs  fileop.rs  mod.rs  param.rs  template.rs
crates/leptos_extra/: Cargo.toml
crates/leptos_extra/src/: query.rs  signal.rs
crates/nix-browser/: Cargo.toml
crates/nix_health/: CHANGELOG.md  Cargo.toml  README.md  crate.nix  justfile
crates/nix_health/failing/: .envrc  flake.nix
crates/nix_health/module/: flake-module.nix  flake.nix
crates/nix_health/src/: lib.rs  logging.rs  main.rs  report.rs  traits.rs
crates/nix_health/src/check/: caches.rs  direnv.rs  flake_enabled.rs  home_manager.rs  max_jobs.rs  min_nix_version.rs  mod.rs  nix_installer.rs  rosetta.rs  shell_configurations.rs  system.rs  trusted_users.rs
crates/nix_rs/: CHANGELOG.md  Cargo.toml  README.md  crate.nix
crates/nix_rs/src/: arg.rs  command.rs  config.rs  copy.rs  detsys_installer.rs  env.rs  info.rs  lib.rs  refs.rs  store.rs  system.rs  system_list.rs  version.rs  version_spec.rs
crates/nix_rs/src/flake/: command.rs  eval.rs  metadata.rs  mod.rs  outputs.rs  schema.rs  show.rs  system.rs  url.rs
crates/nix_rs/src/flake/functions/: README.md  core.rs  mod.rs
crates/nix_rs/src/flake/functions/addstringcontext/: flake.nix  mod.rs
crates/nix_rs/src/flake/functions/metadata/: flake.nix  mod.rs
crates/nix_rs/src/flake/metadata/: flake.nix  mod.rs
crates/nix_rs/src/flake/url/: attr.rs  core.rs  mod.rs  qualified_attr.rs
crates/nix_rs/src/health/: mod.rs  report.rs  traits.rs
crates/nix_rs/src/health/check/: caches.rs  flake_enabled.rs  max_jobs.rs  min_nix_version.rs
crates/nix_rs/src/nix/: command.rs  config.rs  mod.rs  version.rs
crates/nix_rs/src/nix/flake/: show.rs
crates/nix_rs/src/nix/health/check/: flake_enabled.rs  max_jobs.rs  min_nix_version.rs
crates/nix_rs/src/store/: command.rs  mod.rs  path.rs  uri.rs
crates/nixci/: CHANGELOG.md  Cargo.toml  README.md  crate.nix
crates/nixci/src/: cli.rs  command.rs  config.rs  flake_ref.rs  lib.rs  main.rs
crates/nixci/src/command/: build.rs  core.rs  gh.rs  gh_matrix.rs  mod.rs  run.rs  run_remote.rs
crates/nixci/src/config/: core.rs  mod.rs  ref_.rs  subflake.rs  subflakes.rs
crates/nixci/src/github/: matrix.rs  mod.rs  pull_request.rs
crates/nixci/src/nix/: devour_flake.rs  lock.rs  mod.rs  nix_store.rs  ssh.rs  system_list.rs
crates/nixci/src/step/: build.rs  core.rs  custom.rs  flake_check.rs  lockfile.rs  mod.rs  nix_version.rs
crates/nixci/tests/: integration_test.rs
crates/omnix/: Cargo.toml
crates/omnix-ci/: CHANGELOG.md  Cargo.toml  README.md  crate.nix
crates/omnix-ci/src/: lib.rs
crates/omnix-cli/: Cargo.toml  crate.nix
crates/omnix-cli/src/: args.rs  lib.rs  main.rs
crates/omnix-cli/src/command/: ci.rs  completion.rs  core.rs  develop.rs  hack.rs  health.rs  init.rs  mod.rs  show.rs
crates/omnix-cli/tests/: cli.rs  flake.nix  test.rs
crates/omnix-cli/tests/command/: ci.rs  core.rs  health.rs  init.rs  mod.rs  show.rs
crates/omnix-common/: Cargo.toml  crate.nix
crates/omnix-common/src/: check.rs  config.rs  fs.rs  lib.rs  logging.rs  markdown.rs
crates/omnix-develop/: Cargo.toml  crate.nix
crates/omnix-develop/src/: config.rs  core.rs  readme.rs
crates/omnix-gui/: Cargo.toml  Dioxus.toml  crate.nix
crates/omnix-gui/assets/: tailwind.css
crates/omnix-gui/src/: cli.rs  logging.rs  main.rs
crates/omnix-gui/src/app/: flake.rs  health.rs  info.rs  mod.rs  widget.rs
crates/omnix-gui/src/app/state/: datum.rs  mod.rs
crates/omnix-hack/: Cargo.toml  crate.nix
crates/omnix-health/: CHANGELOG.md  Cargo.toml  README.md  crate.nix
crates/omnix-health/failing/: flake.nix
crates/omnix-health/src/: json.rs  lib.rs  traits.rs
crates/omnix-health/src/check/: caches.rs  direnv.rs  flake_enabled.rs  homebrew.rs  max_jobs.rs  min_nix_version.rs  mod.rs  nix_version.rs  rosetta.rs  shell.rs  trusted_users.rs
crates/omnix-init/: Cargo.toml  crate.nix
crates/omnix-init/registry/: flake.nix  registry.json
crates/omnix-init/src/: action.rs  config.rs  core.rs  demo.json  demo.nix  lib.rs  main.rs  param.rs  registry.rs  template.rs  test.rs
crates/omnix/src/: lib.rs  logging.rs
crates/system_rs/: Cargo.toml
css/: input.css
doc/: book.toml  config.md  default.nix  flake.nix  history.md  index.md  index.yaml  mod.just  om.md
doc/om/: ci.md  develop.md  health.md  index.md  init.md  show.md
doc/src/: README.md  SUMMARY.md  history.md  index.md
e2e/: README.md  flake-module.nix  node_modules  package.json  playwright.config.ts
e2e-playwright/: README.md  flake-module.nix  package-lock.json  package.json  playwright.config.js
e2e-playwright/tests/: nix-version.spec.ts  nix-version.test.js
nix/: cache-pins.nix  e2e.nix  flake-module.nix  rust.nix
nix/envs/: default.nix
nix/flake-schemas/: flake.nix
nix/modules/: cache-pins.nix  closure-size.nix  devshell.nix  doc.nix  formating.nix  nixpkgs.nix  om.nix  rust.nix
nix/om/: flake-module.nix  flake.nix
src/: app.rs  cli.rs  command.rs  lib.rs  logging.rs  main.rs  nix.rs  query.rs  server.rs  thing.rs  widget.rs
src/app/: flake.rs  health.rs  info.rs  mod.rs  state.rs  widget.rs
src/leptos_extra/: mod.rs  query.rs  signal.rs
src/nix/: command.rs  config.rs  health.rs  info.rs  mod.rs  system.rs  version.rs
tests/: dom.rs  web.rs
(+71 files in other folders)
