[workspace]
resolver = "2"

members = [
  "crates/omnix",
  "crates/omnix-cli",
  "crates/omnix-gui",
  "crates/nix_rs",
  "crates/nixci",
  "crates/nix_health",
  "crates/flakreate",
]

[workspace.dependencies]
anyhow = "1.0.75"
bytesize = { version = "1.3.0", features = ["serde"] }
cfg-if = "1"
clap = { version = "4.3", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.0"
colored = { version = "2.0" }
console = "0.15.8"
console_error_panic_hook = "0.1"
console_log = "1"
direnv = "0.1.1"
fermi = "0.4.3"
flakreate = { path = "./crates/flakreate" }
glob = "0.3.1"
http = "0.2"
human-panic = "1.1.5"
inquire = "0.7.5"
is_proc_translated = { version = "0.1.1" }
nixci = { path = "./crates/nixci" }
nix_health = { version = "1.0.0", path = "./crates/nix_health" }
nix_rs = { version = "1.0.0", path = "./crates/nix_rs" }
omnix = { path = "./crates/omnix" }
os_info = "3.7.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.9.3"
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.18"
serde_with = { version = "3.2", features = ["json"] }
shell-words = { version = "1.1.0" }
sysinfo = "0.29.10"
tabled = "0.15"
thiserror = "1.0"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
try-guard = "0.2.0"
url = { version = "2.4", features = ["serde"] }
urlencoding = "2.1.3"
uuid = { version = "1.3.0", features = ["serde", "v4", "js"] }
which = { version = "4.4.2" }
clap_complete = "4.5.0"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
