[workspace]
resolver = "2"

members = [
  "crates/omnix-common",
  "crates/omnix-cli",
  "crates/omnix-init",
  "crates/omnix-hack",
  "crates/nix_rs",
  "crates/nixci",
  "crates/nix_health",
]

[workspace.dependencies]
anyhow = "1.0.75"
async-walkdir = "2.0.0"
bytesize = { version = "1.3.0", features = ["serde"] }
cfg-if = "1"
clap = { version = "4.3", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.0"
colored = { version = "2.0" }
console = "0.15.8"
console_error_panic_hook = "0.1"
console_log = "1"
direnv = "0.1.1"
fermi = "0.4.3"
futures-lite = "2.3.0"
glob = "0.3.1"
globset = { version = "0.4", features = ["serde1"] }
http = "0.2"
human-panic = "1.1.5"
inquire = "0.7.5"
itertools = "0.13"
is_proc_translated = { version = "0.1.1" }
lazy_static = "1.4.0"
pulldown-cmark-mdcat = "2.5.0"
pulldown-cmark = { version = "0.12.1", default-features = false }
nixci = { version = "1.1.0", path = "./crates/nixci" }
nix_health = { version = "1.0.0", path = "./crates/nix_health" }
nix_rs = { version = "1.0.0", path = "./crates/nix_rs" }
nonempty = { version = "0.10.0", features = ["serialize"] }
omnix-common = { version = "0.1.0", path = "./crates/omnix-common" }
omnix-init = { version = "0.1.0", path = "./crates/omnix-init" }
omnix-hack = { version = "0.1.0", path = "./crates/omnix-hack" }
os_info = "3.7.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.9.3"
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.18"
serde_with = { version = "3.2", features = ["json"] }
shell-words = { version = "1.1.0" }
sysinfo = "0.29.10"
syntect = { version = "5.2.0", features = ["default-syntaxes"] }
tabled = "0.15"
tempfile = "3"
termimad = "0.30.0"
thiserror = "1.0"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
try-guard = "0.2.0"
url = { version = "2.4", features = ["serde"] }
urlencoding = "2.1.3"
uuid = { version = "1.3.0", features = ["serde", "v4", "js"] }
which = { version = "4.4.2" }
clap_complete = "4.5.0"
whoami = "1.5.2"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
