[package]
edition = "2021"
name = "leptos_extra"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
leptos.workspace = true
leptos_query.workspace = true
tracing = "0.1"

[features]
hydrate = ["leptos/hydrate", "leptos_query/hydrate"]
ssr = ["leptos/ssr", "leptos_query/ssr"]
