[package]
edition.workspace = true
name = "nix_health"
version = "0.1.0"
license.workspace = true
repository.workspace = true
description = "Health check for the user's Nix environment"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nix-health"
path = "src/main.rs"
required-features = ["ssr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if.workspace = true
regex = "1.9.3"
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio = { version = "1.29", features = ["full"], optional = true }
url = { version = "2.4", features = ["serde"] }
nix_rs.workspace = true
human-panic.workspace = true
anyhow = { version = "1.0.75", optional = true }
colored = { version = "2.0", optional = true }

[features]
ssr = ["dep:tokio", "dep:anyhow", "dep:colored", "nix_rs/ssr"]
