[package]
edition.workspace = true
name = "nix_rs"
version = "0.1.4"
license.workspace = true
repository.workspace = true
description = "Rust library for interacting with the Nix command"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if.workspace = true
regex = "1.9.3"
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio = { version = "1.29", features = ["full"], optional = true }
tracing.workspace = true
url = { version = "2.4", features = ["serde"] }

[features]
ssr = ["dep:tokio"]
