[package]
name = "nix_rs"
# Important: remember to update the top-level Cargo.toml if updating major version
version = "1.3.1"
license = "Apache-2.0"
repository = "https://github.com/juspay/omnix"
description = "Rust library for interacting with the Nix command"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = { workspace = true }
regex = { workspace = true }
os_info = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_qs = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
colored = { workspace = true }
shell-words = { workspace = true }
is_proc_translated = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true, optional = true }
nonempty = { workspace = true }
whoami = { workspace = true }
lazy_static = { workspace = true }
which = { workspace = true }

[features]
clap = ["dep:clap"]
