[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "nixci"
version = "1.1.0"
license = "AGPL-3.0-only"
readme = "README.md"
description = "Define and build CI for Nix projects anywhere"
homepage = "https://omnix.page"
repository = "https://github.com/juspay/omnix"
keywords = ["nix"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-walkdir = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
futures-lite = { workspace = true }
nix_health = { workspace = true }
nix_rs = { workspace = true, features = ["clap"] }
nonempty = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
try-guard = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
