[package]
name = "omnix-cli"
version = "0.1.0"
edition = "2021"
default-run = "om"
description = "Improve developer experience of using Nix"
homepage = "https://omnix.page"
repository = "https://github.com/juspay/omnix"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "om"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
colored = { workspace = true }
flakreate = { workspace = true }
human-panic = { workspace = true }
nixci = { workspace = true }
nix_health = { workspace = true }
nix_rs = { workspace = true }
omnix-common = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap_complete = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_cmd = "2"
assert_fs = "1"
ctor = "0.2"
predicates = "3"
regex = "1.9"
rexpect = "0.5"
