[package]
name = "omnix-cli"
version = "1.3.0"
edition = "2021"
default-run = "om"
# NOTE: The 'description' here will be printed in `om` CLI banner (thanks to `clap` crate)
description = "omnix: a developer-friendly companion for Nix <https://omnix.page>"
homepage = "https://omnix.page"
repository = "https://github.com/juspay/omnix"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "om"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
colored = { workspace = true }
human-panic = { workspace = true }
omnix-ci = { workspace = true }
omnix-health = { workspace = true }
nix_rs = { workspace = true }
omnix-common = { workspace = true }
omnix-init = { workspace = true }
omnix-develop = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_cmd = "2"
assert_fs = "1"
assert_matches = "1.5"
ctor = "0.2"
predicates = "3"
regex = "1.9"
tempfile = { workspace = true }
tokio = { workspace = true }
