[package]
name = "omnix-common"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/juspay/omnix"
license = "AGPL-3.0-only"
description = "Common functionality for omnix frontends"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
async-walkdir = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
futures-lite = { workspace = true }
nix_rs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
which = { workspace = true }
