[package]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/juspay/omnix"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "omnix-gui"
version = "0.1.0"
homepage = "https://github.com/juspay/omnix"
build = "build.rs"

[dependencies]
cfg-if = { workspace = true }
clap = { version = "4.3", features = ["derive", "env"] }
human-panic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix_rs = { workspace = true }
direnv = { workspace = true }
nix_health = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { workspace = true }
serde_with = { version = "3.2", features = ["json"] }
bytesize = { version = "1.3.0", features = ["serde"] }
anyhow = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
http = { workspace = true }
regex = { workspace = true }
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde", "v4", "js"] }
dioxus = { version = "0.5.0", features = ["desktop"] }
dioxus-desktop = "0.5.0"
dioxus-router = "0.5.0"
dioxus-signals = "0.5.0"
dioxus-sdk = { version = "0.5.0", features = ["storage"] }
fermi = "0.4.3"
omnix = { path = "../omnix" }

[package.metadata.docs.rs]
all-features = true
