[package]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/juspay/omnix"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "omnix-gui"
version = "0.1.0"
homepage = "https://github.com/juspay/omnix"
build = "build.rs"
description = "Graphical interface for Omnix"

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
cfg-if = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
dioxus = { version = "0.5.0", features = ["desktop"] }
dioxus-desktop = "0.5.0"
dioxus-router = "0.5.0"
dioxus-sdk = { version = "0.5.0", features = ["storage"] }
dioxus-signals = "0.5.0"
direnv = { workspace = true }
fermi = { workspace = true }
http = { workspace = true }
human-panic = { workspace = true }
nix_health = { workspace = true }
nix_rs = { workspace = true }
omnix-common = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[package.metadata.docs.rs]
all-features = true
