[package]
name = "omnix-health"
version = "1.3.2"
license = "Apache-2.0"
repository = "https://github.com/juspay/omnix"
description = "Check the health of your Nix setup"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
cfg-if = { workspace = true }
clap = { workspace = true }
omnix-common = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
nix_rs = { workspace = true }
direnv = { workspace = true }
human-panic = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
which = { workspace = true }
bytesize = { workspace = true }
semver = { workspace = true }
serde_repr = { workspace = true }
