[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "omnix-init"
version = "1.0.1"
repository = "https://github.com/juspay/omnix"
description = "Enriched Nix flake templates"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
assert_fs = "1"
assert_matches = "1.5"
colored = { workspace = true }
console = { workspace = true }
globset = { workspace = true }
inquire = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
nix_rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
omnix-common = { workspace = true }
