[package]
name = "omnix"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/juspay/omnix"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
